--- a/app/Views/users/index.html
+++ b/app/Views/users/index.html
@@ -17,7 +17,7 @@
         <th>Nombre</th>
         <th>Apellidos</th>
         <th>Edad</th>
-        <th>Opciones</th>
+        <th>Acciones</th>
       </tr>
     </thead>
     <tbody>
