--- a/app/Views/users/edit.html
+++ b/app/Views/users/edit.html
@@ -40,7 +40,7 @@
     <div class="form-group">
       <label class="col-lg-2 control-label">Edad</label>
       <div class="col-lg-10">
-        <input type="number" class="form-control" name="age" value="{{ user.age }}">
+        <input type="number" name="age" value="{{ user.age }}">
       </div>
     </div>
     <div class="form-group">
