--- a/app/Views/posts/index.html
+++ b/app/Views/posts/index.html
@@ -1,30 +1,32 @@
 {% extends "base.html" %}
 
-{% block title %}Usuarios{% endblock %}
+{% block title %}Posts{% endblock %}
 
 {% block body %}
 
 <a href="/" class="btn btn-warning">Home</a>
 <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
 
-<h1>Usuarios <a href="/users/create" class="btn btn-info">Crear</a></h1>
+<h1>Posts <a href="/posts/create" class="btn btn-info">Crear</a></h1>
 
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Nombre</th>
-      <th>Email</th>
+      <th>Título</th>
+      <th>Contenido</th>
+      <th>Autor</th>
       <th>Acciones</th>
     </tr>
   </thead>
   <tbody>
-  {% for user in users %}
+  {% for post in posts %}
     <tr>
-      <td>{{ user.name }}</td>
-      <td>{{ user.email }}</td>
+      <td>{{ post.title }}</td>
+      <td>{{ post.content }}</td>
+      <td>{{ post.author }}</td>
       <td class="text-center">
-        <form action="/users/delete/{{ user.id }}" method="post">
-          <a href="/users/edit/{{ user.id }}" class="btn btn-info">Editar</a> 
+        <form action="/posts/delete/{{ post.id }}" method="post">
+          <a href="/posts/edit/{{ post.id }}" class="btn btn-info">Editar</a> 
           <button type="submit" class="btn btn-danger">Borrar</button>
         </form>
       </td>
