--- a/app/Views/users/edit.html
+++ b/app/Views/users/edit.html
@@ -1,54 +1,38 @@
 {% extends "base.html" %}
 
-{% block title %}Crear usuario{% endblock %}
+{% block title %}Editar usuario{% endblock %}
 
 {% block body %}
 
-<br>
-
-<form action="/users/update/{{ user.id }}" method="POST" class="form-horizontal">
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Correo</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" name="email" value="{{ user.email }}">
-      </div>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <form action="/users/update/{{ user.id }}" method="POST" class="form-horizontal">
+            <div class="form-group">
+              <label class="col-lg-2 control-label">Nombre</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control" name="name" value="{{ user.name }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label">Email</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control" name="email" value="{{ user.email }}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label">Contraseña</label>
+              <div class="col-lg-10">
+                  <input type="password" class="form-control" name="pass" value="">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-lg-10 col-lg-offset-2">
+                <button type="submit" class="btn btn-primary">Modificar usuario</button>
+                <button type="reset" class="btn btn-default">Cancelar</button>
+              </div>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Nombre</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" name="name" value="{{ user.name }}">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Apellido</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" name="lastname" value="{{ user.lastname }}">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Apodo</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" name="username" value="{{ user.username }}">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Contraseña</label>
-      <div class="col-lg-10">
-        <input type="password" class="form-control" name="pass" value="">
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="col-lg-2 control-label">Edad</label>
-      <div class="col-lg-10">
-        <input type="number" name="age" value="{{ user.age }}">
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-lg-10 col-lg-offset-2">
-        <button type="submit" class="btn btn-primary">Modificar usuario</button>
-        <button type="reset" class="btn btn-default">Cancelar</button>
-      </div>
-    </div>
-</form>
+</div>
 
 {% endblock %}
