Cambiar vistas y mejorar estilo formulario login

--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -4,18 +4,14 @@
 
 {% block body %}
 
-<h1 id="title">Debut</h1>
 
-<div class="jumbotron">
-  <h2>Welcome!</h2>
-  <p>
-  Debut es un microframework PHP en desarrollo que usa el patrón arquitectónico MVC con 
-  ejemplos simples. Enjoy! :)
-  </p>
-  <br/>
-  <p>
-  	<a href="/login" class="btn btn-primary btn-lg">Ir al panel</a>
-  </p>
+<div class="container container-table">
+    <div class="row vertical-center-row text-center">
+    <h1 class="h1" id="title">Debut</h1>
+
+    <a href="/login" class="btn btn-primary btn-lg">Come On!</a>
+    </div>
 </div>
+
 
 {% endblock %}
