--- a/app/Views/auth/login.html
+++ b/app/Views/auth/login.html
@@ -4,13 +4,13 @@
 
 {% block body %}
 
-<h1>Acceder al CRUD de usuarios</h1>
+<!--<h1>Acceder al panel de administración</h1>
 
 <div class="row login">
   <div class="col-md-6 col-md-offset-3">
   
   <ul>
-    <li>Correo: admin@debut.com</li>
+    <li>Correo: admin@debut.app</li>
     <li>Password: secret</li>
   </ul>
 
@@ -35,6 +35,54 @@
       </div>
     </form>
   </div>
+</div>-->
+
+<div class="container" style="margin-top:40px">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <div class="panel panel-default">
+                <div class="panel-heading">
+                        <strong>Inicie sesión para continuar...</strong>
+                </div>
+                <div class="panel-body">
+                    <form action="/login" method="post">
+                        <fieldset>
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-10  col-md-offset-1 ">
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <span class="input-group-addon">
+                                                            <i class="glyphicon glyphicon-user"></i>
+                                                    </span> 
+                                                    <input class="form-control" placeholder="Usuario" name="email" type="text" autofocus>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <span class="input-group-addon">
+                                                            <i class="glyphicon glyphicon-lock"></i>
+                                                    </span>
+                                                    <input class="form-control" placeholder="Password" name="pass" type="password" value="">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="submit" class="btn btn-lg btn-primary btn-block" value="Acceder">
+                                            </div>
+                                    </div>
+                                </div>
+                        </fieldset>
+                    </form>
+                </div>
+                <div class="panel-footer ">
+                    <strong>Puedes hacer pruebas con:</strong>
+                    <ul>
+                        <li>usuario: admin@debut.app</li>
+                        <li>password: secret</li>
+                    </ul>
+                </div>
+                </div>
+        </div>
+    </div>
 </div>
        
 
