--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,12 +6,32 @@
 \*------------------------------------------------------------*/
 
 body {margin: 20px 0 20px 0;}
-h1 {text-align: center;}
-h1, h2 {font-family: 'Alfa Slab One', cursive;}
 
-/*h1*/#title {font-size: 6.5em;}
+/*h1*/#title {
+    font-size: 10em;
+    opacity: 0.7;
+    margin-top: 5%;
+}
 
 /*div*/.login {margin: 30px 0 20px 0;}
-	/*div*/.login form {
-		margin-top: 20px;
-	}
+    /*div*/.login form {margin-top: 20px;}
+        
+/*------------------------------------------------------------*\  
+ * Formulario login
+\*------------------------------------------------------------*/
+.panel-heading {padding: 5px 15px;}
+
+.panel-footer {
+    padding: 1px 15px;
+    color: #A0A0A0;
+}
+
+.profile-img {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
