Nueva vista login y añadida funcionalidad modal js a editar usuarios

--- a/app/Views/base.html
+++ b/app/Views/base.html
@@ -5,19 +5,20 @@
     <title>{% block title %}{% endblock %}</title>
 
 	<!-- Bootstrap -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!-- Fuentes -->
-	<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
-
+        <!-- // -->
 	<!-- Tema Debut -->
-    <link href="/css/main.css" type="text/css" rel="stylesheet">
-
+        <link href="/css/main.css" type="text/css" rel="stylesheet"> 
+        
 </head>
 <body>
 <div class="container">
     {% block body %}
     {% endblock %}
 </div>
+
 </body>
 </html>
