--- a/app/Views/auth/login.html
+++ b/app/Views/auth/login.html
@@ -4,53 +4,24 @@
 
 {% block body %}
 
-<div class="container" style="margin-top:40px">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <div class="panel panel-default">
-                <div class="panel-heading">
-                        <strong>Inicie sesión para continuar...</strong>
-                </div>
-                <div class="panel-body">
-                    <form action="/login" method="post">
-                        <fieldset>
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-10  col-md-offset-1 ">
-                                            <div class="form-group">
-                                                <div class="input-group">
-                                                    <span class="input-group-addon">
-                                                            <i class="glyphicon glyphicon-user"></i>
-                                                    </span> 
-                                                    <input class="form-control" placeholder="Usuario" name="email" type="text" autofocus>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="input-group">
-                                                    <span class="input-group-addon">
-                                                            <i class="glyphicon glyphicon-lock"></i>
-                                                    </span>
-                                                    <input class="form-control" placeholder="Password" name="pass" type="password" value="">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="submit" class="btn btn-lg btn-primary btn-block" value="Acceder">
-                                            </div>
-                                    </div>
-                                </div>
-                        </fieldset>
-                    </form>
-                </div>
-                <div class="panel-footer ">
-                    <strong>Puedes hacer pruebas con:</strong>
-                    <ul>
-                        <li>usuario: admin@debut.app</li>
-                        <li>password: secret</li>
-                    </ul>
-                </div>
-                </div>
-        </div>
+<div class="container login">
+    <div class="login-header">
+      <a href="/" class="btn btn-danger btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
+      <h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
     </div>
-</div>
-       
+    <div class="login-body">
+        <form role="form" action="/login" method="post">
+        <div class="form-group">
+          <label for="email"><span class="glyphicon glyphicon-user"></span> Email</label>
+          <input type="text" class="form-control" id="email" name="email" placeholder="Introduce tu email" value="admin@debut.app">
+        </div>
+        <div class="form-group">
+          <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
+          <input type="password" class="form-control" id="psw" name="pass" placeholder="Introduce tu contraseña" value="secret">
+        </div>
+          <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+      </form>
+    </div>
+</div>  
 
 {% endblock %}
