--- a/app/Views/posts/create.html
+++ b/app/Views/posts/create.html
@@ -14,7 +14,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-lg-2 control-label">Email</label>
+              <label class="col-lg-2 control-label">Contenido</label>
               <div class="col-lg-10">
                   <textarea class="form-control" rows="3" name="content" placeholder="El contenido del post..."></textarea>
               </div>
