--- a/app/Views/users/index.html
+++ b/app/Views/users/index.html
@@ -24,7 +24,10 @@
       <td>{{ user.email }}</td>
       <td class="text-center">
         <form action="/users/delete/{{ user.id }}" method="post">
-          <a href="/users/edit/{{ user.id }}" class="btn btn-info">Editar</a> 
+          <a data-id="{{ user.id }}" 
+             data-name="{{ user.name }}"
+             data-email="{{ user.email }}"
+             title="Add this item" class="open-editUserDialog btn btn-primary" href="#editUserDialog">Editar</a>
           <button type="submit" class="btn btn-danger">Borrar</button>
         </form>
       </td>
@@ -33,6 +36,64 @@
   </tbody>
 </table>
 
+<!-- Modal HTML -->
+<div class="modal fade" id="editUserDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Editar usuario</h4>
+      </div>
+      <form action="" method="POST" class="form-horizontal">
+          <div class="modal-body">
+            <div class="form-group">
+            <label class="col-lg-2 control-label">Nombre</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="name" id="userName" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Email</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="email" id="userEmail" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Contraseña</label>
+            <div class="col-lg-10">
+                <input type="password" class="form-control" name="pass" value="">
+            </div>
+          </div>
+          </div>
+          <div class="modal-footer">
+          <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+              <button data-dismiss="modal" class="btn btn-default">Cancelar</button>
+              <button type="submit" class="btn btn-primary">Modificar usuario</button>
+            </div>
+          </div>
+          </div>
+      </form>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
+<!-- // modales -->
+<script>
+    $(document).on("click", ".open-editUserDialog", function (e) {
+	e.preventDefault();
+	var _self = $(this);
+	var id = _self.data('id');
+        var name = _self.data('name');
+        var email = _self.data('email');
+        
+        $("form").attr("action", "/users/update/" + id);
+        $("#userName").val(name);
+        $("#userEmail").val(email);
+        
+	$(_self.attr('href')).modal('show');
+});
+</script>
 
 {% endblock %}
