--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,26 +12,19 @@ body {margin: 20px 0 20px 0;}
     opacity: 0.7;
     margin-top: 5%;
 }
-
-/*div*/.login {margin: 30px 0 20px 0;}
-    /*div*/.login form {margin-top: 20px;}
         
 /*------------------------------------------------------------*\  
  * Formulario login
 \*------------------------------------------------------------*/
-.panel-heading {padding: 5px 15px;}
-
-.panel-footer {
-    padding: 1px 15px;
-    color: #A0A0A0;
-}
-
-.profile-img {
-    width: 96px;
-    height: 96px;
-    margin: 0 auto 10px;
-    display: block;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-}
+/*div*/.login {max-width: 500px;}
+    /*div*/.login form {
+        margin-top: 20px;
+        padding: 0 20px;
+    }
+    .login-header {
+        border-bottom: solid 1px #ccc;
+        padding-bottom: 20px;
+    }
+    .login-header a {float:right;}
+    .login-header h4 {font-size: 2.1em;}
+    .login-body {padding: 10px 30px;}
