--- a/app/Views/users/index.html
+++ b/app/Views/users/index.html
@@ -47,7 +47,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+        <h4 class="modal-title" id="ModalLabel">Mensaje</h4>
       </div>
       <form action="" method="POST" class="form-horizontal">
           <div class="modal-body">
