Mejor sistema de navegación entre las vistas

--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -9,7 +9,7 @@
     <div class="row vertical-center-row text-center">
     <h1 class="h1" id="title">Debut</h1>
 
-    <a href="/login" class="btn btn-primary btn-lg">Come On!</a>
+    <a href="/login" class="btn btn-default btn-lg">Come On!</a>
     </div>
 </div>
 
