--- a/app/Views/base.html
+++ b/app/Views/base.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 
-	<!-- Bootstrap -->
+	<!-- Bootstrap & jQuery -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!-- Fuentes -->
-        <!-- // -->
+        <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
 	<!-- Tema Debut -->
         <link href="/css/main.css" type="text/css" rel="stylesheet"> 
         
