--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,10 +8,12 @@
 body {margin: 20px 0 20px 0;}
 
 /*h1*/#title {
-    font-size: 10em;
+    font-size: 15em;
     opacity: 0.7;
     margin-top: 5%;
+    font-family: 'Inconsolata', monospace;
 }
+.btn {margin-top: 3px;}
         
 /*------------------------------------------------------------*\  
  * Formulario login
@@ -28,3 +30,29 @@ body {margin: 20px 0 20px 0;}
     .login-header a {float:right;}
     .login-header h4 {font-size: 2.1em;}
     .login-body {padding: 10px 30px;}
+    
+/*------------------------------------------------------------*\  
+ * Responsive
+\*------------------------------------------------------------*/
+/* Small Devices, Tablets */
+    @media only screen and (max-width : 768px) {
+        /*h1*/#title {
+            font-size: 10em;
+            opacity: 0.7;
+            margin-top: 5%;
+            font-family: 'Inconsolata', monospace;
+        }
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (max-width : 480px) {
+        /*h1*/#title {
+            font-size: 8em;
+            opacity: 0.7;
+            margin-top: 5%;
+            font-family: 'Inconsolata', monospace;
+        }
+    }
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (max-width : 320px) {}
