--- a/app/Views/posts/index.twig.html
+++ b/app/Views/posts/index.twig.html
@@ -1,39 +1,41 @@
-{% extends "base.html" %}
+{% extends "base.twig.html" %}
 
-{% block title %}Usuarios{% endblock %}
+{% block title %}Posts{% endblock %}
 
 {% block body %}
 
 <a href="/menu" class="btn btn-warning">Home</a>
-<a href="/posts" class="btn btn-default ">CRUD posts</a>
+<a href="/users" class="btn btn-default">CRUD usuarios</a>
 <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
 
-<h1>Usuarios <button type="button" class="btn btn-primary" data-toggle="modal" 
+<h1>Posts <button type="button" class="btn btn-primary" data-toggle="modal" 
                   data-target="#Modal" 
-                  data-whatever="Crear usuario"
-                  data-action="/users/store">Crear</button></h1>
+                  data-whatever="Crear post"
+                  data-action="/posts/store">Crear</button></h1>
 
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Nombre</th>
-      <th>Email</th>
+      <th>Título</th>
+      <th>Contenido</th>
+      <th>Autor</th>
       <th>Acciones</th>
     </tr>
   </thead>
   <tbody>
-  {% for user in users %}
+  {% for post in posts %}
     <tr>
-      <td>{{ user.name }}</td>
-      <td>{{ user.email }}</td>
+      <td>{{ post.title }}</td>
+      <td>{{ post.content }}</td>
+      <td>{{ post.author }}</td>
       <td class="text-center">
-        <form action="/users/delete/{{ user.id }}" method="post">
+        <form action="/posts/delete/{{ post.id }}" method="post">
           <button type="button" class="btn btn-primary" data-toggle="modal" 
                   data-target="#Modal" 
-                  data-whatever="Editar usuario"
-                  data-name="{{ user.name }}"
-                  data-email="{{ user.email }}"
-                  data-action="/users/update/{{ user.id }}">Editar</button>
+                  data-whatever="Editar post"
+                  data-title="{{ post.title }}"
+                  data-content="{{ post.content }}"
+                  data-action="/posts/update/{{ post.id }}">Editar</button>
           <button type="submit" class="btn btn-danger">Borrar</button>
         </form>
       </td>
@@ -53,22 +55,16 @@
       <form action="" method="POST" class="form-horizontal">
           <div class="modal-body">
             <div class="form-group">
-            <label class="col-lg-2 control-label">Nombre</label>
+            <label class="col-lg-2 control-label">Título</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="name" placeholder="Escribe un nombre..." id="userName" value="" />
+                <input type="text" class="form-control" placeholder="Escribe un título..." name="title" id="postTitle" value="" />
             </div>
           </div>
           <div class="form-group">
-            <label class="col-lg-2 control-label">Email</label>
+            <label class="col-lg-2 control-label">Contenido</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="email" placeholder="Escribe un email..." id="userEmail" value="" />
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-2 control-label">Contraseña</label>
-            <div class="col-lg-10">
-                <input type="password" class="form-control" name="pass" value="">
-            </div>
+                <textarea class="form-control" rows="3" name="content" placeholder="Escribe el contenido del post..." id="postContent"></textarea>
+              </div>
           </div>
           </div>
           <div class="modal-footer">
@@ -94,18 +90,20 @@
         // variables
         var recipient = button.data('whatever');
         var action = button.data('action');
-        var name = button.data('name');
-        var email = button.data('email');
+        var title = button.data('title');
+        var content = button.data('content');
         
         var modal = $(this)
         // Mensaje de la modal
         modal.find('.modal-title').text(recipient)
         modal.find("form").attr("action", action);
         // Datos pasados por Twig
-        modal.find("#userName").val(name);
-        modal.find("#userEmail").val(email);
+        modal.find("#postTitle").val(title);
+        modal.find("#postContent").val(content);
         modal.find("#response").html(recipient);
     }); 
 </script>
+
+
 
 {% endblock %}
