--- a/app/Views/errors/exceptions.twig
+++ b/app/Views/errors/exceptions.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig.html" %}
+{% extends "base.twig" %}
 
 {% block title %}Error interno{% endblock %}
 
@@ -7,3 +7,4 @@
     <h1>Ups!, ha ocurrido un error...</h1>
 
 {% endblock %}
+
