Preparando cambios para paginaciones de CRUD

--- a/app/Views/posts/index.twig
+++ b/app/Views/posts/index.twig
@@ -43,6 +43,10 @@
   {% endfor %}
   </tbody>
 </table>
+  
+<ul class="pagination">
+    {{ links | raw }}
+</ul>
 
 <!-- // Modales -->
 <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel">
