--- a/app/Views/users/index.twig
+++ b/app/Views/users/index.twig
@@ -42,6 +42,11 @@
   </tbody>
 </table>
 
+<ul class="pagination">
+    {{ links | raw }}
+</ul>
+
+
 <!-- // Modales -->
 <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel">
   <div class="modal-dialog" role="document">
