Preparando validaciones para las Requests

--- a/app/Views/users/index.twig
+++ b/app/Views/users/index.twig
@@ -72,7 +72,7 @@
           <div class="form-group">
             <label class="col-lg-2 control-label">Contraseña</label>
             <div class="col-lg-10">
-                <input type="password" class="form-control" name="pass" value="">
+                <input type="password" class="form-control" name="password" value="">
             </div>
           </div>
           </div>
