Grandes cambios en el modelo base, redirecciones con la clase Redirector y mejorada clase de validación

--- a/app/Views/base.twig
+++ b/app/Views/base.twig
@@ -17,6 +17,20 @@
 </head>
 <body>
 <div class="container">
+    
+    <!-- Mensajes de alerta -->
+    {% set alert_messages %}
+    {% if session.flash_messages %}
+        <div class="alert alert-danger">
+            <ul>
+            {% for messages in session.flash_messages %}
+                <li>{{messages}}</li>
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+    {% endset %}
+    
     {% block body %}
     {% endblock %}
 </div>
