--- a/app/Views/posts/index.twig
+++ b/app/Views/posts/index.twig
@@ -13,6 +13,8 @@
                   data-whatever="Crear post"
                   data-action="/posts/store">Crear</button></h1>
 
+{{ alert_messages }}
+
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
