--- a/app/Views/users/index.twig
+++ b/app/Views/users/index.twig
@@ -13,7 +13,7 @@
                   data-whatever="Crear usuario"
                   data-action="/users/store">Crear</button></h1>
 
-{{ alert_messages }}
+{{ macros.messages('errors') }}
 
 <table class="table table-striped table-bordered">
   <thead>
