--- a/app/Views/auth/login.twig
+++ b/app/Views/auth/login.twig
@@ -3,21 +3,24 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-
+    
 <div class="container login">
     <div class="login-header">
       <a href="/" class="btn btn-danger btn-default"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
       <h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
     </div>
     <div class="login-body">
+        
+        {{ macros.messages('status') }}
+        
         <form role="form" action="/login" method="post">
         <div class="form-group">
           <label for="email"><span class="glyphicon glyphicon-user"></span> Email</label>
           <input type="text" class="form-control" id="email" name="email" placeholder="Introduce tu email" value="admin@debut.app">
         </div>
         <div class="form-group">
-          <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
-          <input type="password" class="form-control" id="psw" name="pass" placeholder="Introduce tu contraseña" value="secret">
+          <label for="password"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Introduce tu contraseña" value="secret">
         </div>
           <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
       </form>
