Revisado gran parte del proyecto y optimizado algunas funciones. También permite el registro de usuarios la demo

--- a/app/Views/base.twig
+++ b/app/Views/base.twig
@@ -17,8 +17,8 @@
 </head>
 <body>
 <div class="container"> 
-    <!-- macros para las vistas  -->
-    {% import 'macros.twig' as macros %}
+    <!-- requests para las vistas  -->
+    {% import 'request.twig' as request %}
     
     {% block body %}
     {% endblock %}
