--- a/app/Views/auth/login.twig
+++ b/app/Views/auth/login.twig
@@ -11,7 +11,7 @@
     </div>
     <div class="login-body">
         
-        {{ macros.messages('status') }}
+        {{ request.messages('success') }}
         
         <form role="form" action="/login" method="post">
         <div class="form-group">
