--- a/app/Views/auth/register.twig
+++ b/app/Views/auth/register.twig
@@ -11,16 +11,16 @@
     </div>
     <div class="login-body">
         
-        {{ macros.messages('status') }}
+        {{ request.messages('danger') }}
         
         <form role="form" action="/register" method="post">
         <div class="form-group">
           <label for="name"><span class="glyphicon glyphicon-user"></span> Nombre</label>
-          <input type="text" class="form-control" id="name" name="name" placeholder="Introduce tu nombre">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Introduce tu nombre" value="{{request.post('name')|trim}}">
         </div>
         <div class="form-group">
           <label for="email"><span class="glyphicon glyphicon-user"></span> Email</label>
-          <input type="text" class="form-control" id="email" name="email" placeholder="Introduce tu email">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Introduce tu email" value="{{request.post('email')|trim}}">
         </div>
         <div class="form-group">
           <label for="password"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
