--- a/app/Views/users/index.twig
+++ b/app/Views/users/index.twig
@@ -9,11 +9,11 @@
 <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
 
 <h1>Usuarios <button type="button" class="btn btn-primary" data-toggle="modal" 
-                  data-target="#Modal" 
+                  data-target="#ModalCreate" 
                   data-whatever="Crear usuario"
                   data-action="/users/store">Crear</button></h1>
 
-{{ macros.messages('errors') }}
+{{ request.messages('danger') }}
 
 <table class="table table-striped table-bordered">
   <thead>
@@ -31,7 +31,7 @@
       <td class="text-center">
         <form action="/users/delete/{{ user.id }}" method="post">
           <button title="Editar usuario" type="button" class="btn btn-primary glyphicon glyphicon-pencil" data-toggle="modal" 
-                  data-target="#Modal" 
+                  data-target="#ModalUpdate" 
                   data-whatever="Editar usuario"
                   data-name="{{ user.name }}"
                   data-email="{{ user.email }}"
@@ -50,7 +50,7 @@
 
 
 <!-- // Modales -->
-<div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel">
+<div class="modal fade" id="ModalCreate" tabindex="-1" role="dialog" aria-labelledby="ModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -72,11 +72,58 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="col-lg-2 control-label">Contraseña</label>
+            <label class="col-lg-2 control-label">Nueva Contraseña</label>
             <div class="col-lg-10">
-                <input type="password" class="form-control" name="password" value="">
+                <input type="password" class="form-control" name="password">
+            </div>
+          </div>    
+          </div>
+          <div class="modal-footer">
+          <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+              <button class="btn btn-default" data-dismiss="modal">Cancelar</button>
+              <button id="response" type="submit" class="btn btn-primary"></button>
             </div>
           </div>
+          </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="ModalUpdate" tabindex="-1" role="dialog" aria-labelledby="ModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="ModalLabel">Mensaje</h4>
+      </div>
+      <form action="" method="POST" class="form-horizontal">
+          <div class="modal-body">
+            <div class="form-group">
+            <label class="col-lg-2 control-label">Nombre</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="name" placeholder="Escribe un nombre..." id="userName" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Email</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" name="email" placeholder="Escribe un email..." id="userEmail" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Anterior Contraseña</label>
+            <div class="col-lg-10">
+                <input type="password" class="form-control" name="oldpassword">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Nueva Contraseña</label>
+            <div class="col-lg-10">
+                <input type="password" class="form-control" name="newpassword">
+            </div>
+          </div>    
           </div>
           <div class="modal-footer">
           <div class="form-group">
@@ -94,7 +141,27 @@
 <script>
     
     // Simple script para crear modales con bootstrap.js
-    $('#Modal').on('show.bs.modal', function (event) {
+    $('#ModalCreate').on('show.bs.modal', function (event) {
+        
+        // Button that triggered the modal
+        var button = $(event.relatedTarget);
+        // variables
+        var recipient = button.data('whatever');
+        var action = button.data('action');
+        var name = button.data('name');
+        var email = button.data('email');
+        
+        var modal = $(this)
+        // Mensaje de la modal
+        modal.find('.modal-title').text(recipient)
+        modal.find("form").attr("action", action);
+        // Datos pasados por Twig
+        modal.find("#userName").val(name);
+        modal.find("#userEmail").val(email);
+        modal.find("#response").html(recipient);
+    }); 
+    
+    $('#ModalUpdate').on('show.bs.modal', function (event) {
         
         // Button that triggered the modal
         var button = $(event.relatedTarget);
