Añadida encriptación a los usuarios registrados

--- a/app/Views/auth/login.twig
+++ b/app/Views/auth/login.twig
@@ -22,8 +22,11 @@
           <label for="password"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Introduce tu contraseña" value="secret">
         </div>
-          <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+        <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-off"></span></button>
       </form>
+    </div>
+    <div class="login-footer center">
+        <a href="/register">¿No tienes una cuenta?></a>
     </div>
 </div>  
 
