--- a/app/Views/auth/register.twig
+++ b/app/Views/auth/register.twig
@@ -26,7 +26,7 @@
           <label for="password"><span class="glyphicon glyphicon-eye-open"></span> Contraseña</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Introduce tu contraseña">
         </div>
-          <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon glyphicon-send"></span> Registrar</button>
+          <button type="submit" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon glyphicon-send"></span></button>
       </form>
     </div>
 </div>  
