Cambios en el diseño

--- a/app/Views/auth/login.twig
+++ b/app/Views/auth/login.twig
@@ -26,7 +26,7 @@
       </form>
     </div>
     <div class="login-footer center">
-        <a href="/register">¿No tienes una cuenta?></a>
+        <a href="/register">¿No tienes una cuenta?</a>
     </div>
 </div>  
 
