--- a/app/Views/index.twig
+++ b/app/Views/index.twig
@@ -9,7 +9,9 @@
     <div class="row vertical-center-row text-center">
     <h1 class="h1" id="title">Debut</h1>
 
-    <a href="/login" class="btn btn-default btn-lg">Come On!</a>
+    <h2>Micro-framework PHP para los que quieren MVC fácil.</h2>
+    <div id="button-login">
+        <a  href="/login" class="btn btn-default btn-lg glyphicon glyphicon-play"></a>
     </div>
 </div>
 
