--- a/app/Views/base.twig
+++ b/app/Views/base.twig
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!-- Fuentes -->
-        <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 	<!-- Tema Debut -->
         <link href="/css/main.css" type="text/css" rel="stylesheet"> 
         
