--- a/app/Views/request.twig
+++ b/app/Views/request.twig
@@ -8,6 +8,7 @@
 {% macro messages(type) %}
 {% if session.flash_messages %}
     <div class="alert alert-{{type}}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
         <ul>
         {% for message in session.flash_messages[type] %}
             <li>{{message}}</li>
