--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@ body {margin: 20px 0 20px 0;}
     font-size: 15em;
     opacity: 0.7;
     margin-top: 5%;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Roboto Slab', serif;
 }
 .btn {margin-top: 3px;}
 .center {text-align:center;}
@@ -23,6 +23,10 @@ input[type="file"] {
 /*------------------------------------------------------------*\  
  * Formulario login
 \*------------------------------------------------------------*/
+
+/*a*/#button-login {
+    margin-top:60px;
+}
 /*div*/.login {max-width: 500px;}
     /*div*/.login form {
         margin-top: 20px;
