Arreglados problemas con mensajes flash no existentes

--- a/app/Views/auth/login.twig
+++ b/app/Views/auth/login.twig
@@ -12,6 +12,7 @@
     <div class="login-body">
         
         {{ request.messages('success') }}
+        {{ request.messages('danger') }}
         
         <form role="form" action="/login" method="post">
         <div class="form-group">
